--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,4 @@ jobs:
             sudo docker stop ${{ secrets.CONTAINER_NAME }}
             sudo docker rm ${{ secrets.CONTAINER_NAME }}
             sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.IMAGE_NAME }}
-            sudo docker run --name ${{ secrets.CONTAINER_NAME }} -d -p 80:8000 --link mysqlku -e DBHOST=${{ secrets.DB_HOST }} -e DBUSER=root -e DBPASS=${{ secrets.DBPASS }} -e DBPORT=${{ secrets.DBPORT }} -e DBNAME=${{ secrets.DBNAME }} -e CLOUDINARY_CLD=${{ secrets.CLOUDINARY_CLD }} -e CLOUDINARY_KEY=${{ secrets.CLOUDINARY_KEY }} -e CLOUDINARY_SECRET=${{ secrets.CLOUDINARY_SECRET }} -e CLOUDINARY_FOLDER=${{ secrets.CLOUDINARY_FOLDER }} -e MIDTRANS_SERVER_KEY=${{ secrets.MIDTRANS_SERVER_KEY }} ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.IMAGE_NAME }}
-        
+            sudo docker run --name ${{ secrets.CONTAINER_NAME }} -d -p 80:8000 --link mysqlku -e DBHOST=${{ secrets.DBHOST }} -e DBUSER=${{ secrets.DBUSER }} -e DBPASS=${{ secrets.DBPASS }} -e DBPORT=${{ secrets.DBPORT }} -e DBNAME=${{ secrets.DBNAME }} -e CLOUDINARY_CLD=${{ secrets.CLOUDINARY_CLD }} -e CLOUDINARY_KEY=${{ secrets.CLOUDINARY_KEY }} -e CLOUDINARY_SECRET=${{ secrets.CLOUDINARY_SECRET }} -e CLOUDINARY_FOLDER=${{ secrets.CLOUDINARY_FOLDER }} -e MIDTRANS_SERVER_KEY=${{ secrets.MIDTRANS_SERVER_KEY }} ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.IMAGE_NAME }}
